links and spacing

--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -66,30 +66,27 @@
                     <p>For this activity, you have a choice of activities:</p>
                     <ul>
                         <li>If you haven't already, fill out the FAFSA, and attach a screenshot of your submitted form
-                            or an
-                            email verification. You may need your parents to fill out their part before you turn it in,
-                            but
-                            you can get started in class creating an account, looking up college numbers, and filling
-                            out
-                            your part.</li>
+                            or an email verification. You may need your parents to fill out their part before you turn
+                            it in, but you can get started in class creating an account, looking up college numbers,
+                            and filling out your part.</li>
                         <li>Apply to any - or as many! - community colleges as you wish. It's free to apply! Attach
                             confirmation of your application.</li>
                         <li>Research a college of interest to you, and submit this information: tuition, fees, and
-                            expenses,
-                            net price calculation, percentage admission rate, percentage graduation rate, national or
-                            regional ranking, and the program you are interested in. Investigate what housing options
-                            interest you and what the cost would be.</li>
+                            expenses, net price calculation, percentage admission rate, percentage graduation rate,
+                            national or regional ranking, and the program you are interested in. Investigate what
+                            housing options interest you and what the cost would be.</li>
                     </ul>
                     <p>Report out on what you did to the group. This can count for your group discussion participation.
                     </p>
                     <p>Posted&nbsp;Tue Mar 25, 2025 at 8:58 pm</p>
-                    <p><a href="https://studentaid.gov/"><strong>Submit Your FAFSA Application</strong></a><strong>
+                    <p><a href="https://studentaid.gov/" target="_blank"><strong>Submit Your FAFSA
+                                Application</strong></a><strong>
                         </strong>(link to FAFSA; submit screenshot when complete)</p>
-                    <p><a href="https://apply.ctc.edu/user"><strong>Apply to Community College</strong></a><strong>
+                    <p><a href="https://apply.ctc.edu/user" target="_blank"><strong>Apply to Community
+                                College</strong></a><strong>
                         </strong></p>
                     <p>(link to admissions portal for WA State Community &amp; Technical Colleges; submit screenshot
-                        when
-                        complete)</p>
+                        when complete)</p>
                     <p><strong>Deep Dive: School of Interest</strong></p>
                     <p>Name of a school that interests you, and the URL:</p>
                     <p>Tuition, fees, expenses:</p>
@@ -101,7 +98,8 @@
                     <ul>
                         <li>This is often on the school&rsquo;s website</li>
                         <li>Check out ranking on US News and World Report: <a
-                                href="https://www.usnews.com/best-colleges/rankings/national-universities">https://www.usnews.com/best-colleges/rankings/national-universities</a>
+                                href="https://www.usnews.com/best-colleges/rankings/national-universities"
+                                target="_blank">https://www.usnews.com/best-colleges/rankings/national-universities</a>
                         </li>
                         <li>Google the ranking of your degree program to see if there is some organization ranking
                             schools.
@@ -148,9 +146,8 @@
                     <p>In the unit&nbsp;<strong> Deep Dive: Deciding Where to Go to School</strong>&nbsp;you may have
                         completed this choice activity:&nbsp;Deep Dive: School of Interest</p>
                     <p>Start with that information and write a report on the school you finally picked (or your current
-                        top
-                        contender). If you didn't do that choice activity, you can do it now because you will need that
-                        information in your report:</p>
+                        top contender). If you didn't do that choice activity, you can do it now because you will need
+                        that information in your report:</p>
                     <ul>
                         <li>Name of the school</li>
                         <li>Tuition, fees, expenses</li>
@@ -171,19 +168,14 @@
                         <li>Your experience at a campus visit, if you had one. If not, are you planning to visit? When?
                         </li>
                         <li>Did you meet with any current students? What questions did you ask? If not, what questions
-                            would
-                            you ask?</li>
+                            would you ask?</li>
                         <li>What clubs, sports, organizations, or other extra-curricular activities do you plan to do?
-                            If
-                            you met with any of the coaches, members, or staff during your visit, talk about what you
-                            got
-                            out of it.</li>
+                            If you met with any of the coaches, members, or staff during your visit, talk about what
+                            you got out of it.</li>
                         <li>Did you attend a sports event or other activity during a campus visit?</li>
                         <li>PHOTOS! Pictures of campus, pictures of you on campus, pictures of you in the school
-                            sweatshirt
-                            standing in front of a big sign with the name, or anything like that to give us a feel for
-                            what
-                            it is like at the school.</li>
+                            sweatshirt standing in front of a big sign with the name, or anything like that to give us
+                            a feel for what it is like at the school.</li>
                     </ul>
                     <p>You can do this all in a Word or Google doc, but I would love to see PowerPoint presentations.
                     </p>
@@ -200,8 +192,7 @@
                         <li>Where is each one located?</li>
                         <li>What were your positive and negative impressions after each visit?</li>
                         <li>What did you learn about your degree program that you didn't already know? How did that
-                            impact
-                            your decision?</li>
+                            impact your decision?</li>
                         <li>Did you meet current students and what questions did they answer for you?</li>
                         <li>What extra-curricular activities at each school interest you?</li>
                         <li>Did you attend any sports events or other events?</li>
@@ -239,7 +230,8 @@
                                     <p>Bates Technical College</p>
                                 </td>
                                 <td width="188">
-                                    <p><a href="https://www.batestech.edu/" target="_blank">https://www.batestech.edu/</a></p>
+                                    <p><a href="https://www.batestech.edu/"
+                                            target="_blank">https://www.batestech.edu/</a></p>
                                 </td>
                                 <td width="69">
                                     <p>Tacoma</p>
@@ -261,7 +253,8 @@
                                     <p>Green River College</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://www.greenriver.edu/" target="_blank">https://www.greenriver.edu/</a></p>
+                                    <p><a href="https://www.greenriver.edu/"
+                                            target="_blank">https://www.greenriver.edu/</a></p>
                                 </td>
                                 <td>
                                     <p>Auburn</p>
