intasc5, multiple images in background

--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -52,8 +52,8 @@
                 this skill by honestly answering, when appropriate, "I don't know, let's find out" and assisting a
                 student researching a topic or technique.</p>
             <p>The artifacts demonstrating my content knowledge are:</p>
-            <ul style="list-style-type: disc;">
-                <li>This very website! I teach HTML and this portfolio website was written manually, not with a tool.
+            <ol>
+                <li><em>This very website!</em> I teach HTML and this portfolio website was written manually, not with a tool.
                     I'm teaching it now, Summer 2025, as I'm creating this portfolio. My students are required to create
                     a website as their final project for the quarter, so it's been fun to show them my final project as
                     I'm creating it. My students have access to the source code: <a
@@ -69,7 +69,7 @@
                 <li>Programming Loops and Counters PowerPoint presentation saved as a PDF</li>
                 <li>Personal Finance class: Paying for College unit: Paying for College Part I PowerPoint presentation
                     saved as a PDF</li>
-            </ul>
+            </ol>
         </div>
 
         <section class="intasc grid1">
