--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="school cwu intasc">
+    <section class="cwusign intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -44,8 +44,80 @@
                 to engage learners in critical thinking, creativity, and collaborative problem solving related to
                 authentic local and global issues.</blockquote>
 
-            <p>text needed Content Application.</p>
+            <p>To satisfy this standard, students must be able to synthesize and apply the knowledge they've learned to
+                solve problems relevent to themselves.</p>
+            <p>The students in my HTML classes are required to design and build a website that incorporates all the
+                elements and techniques they've learned throughout the quarter. They decide the theme, come up with the
+                content, decide on the fonts, color palette, and layouts, apply styling, and debug. They must follow
+                accessibility guidelines and each page must pass validation. The websites are graded on completeness,
+                appearance, and lack of errors. The students also critique each others's websites. I present their work
+                as artifacts.</p>
+            <p>In Personal Finance, I was the teacher of record for these units:
+                <br>Buying a Car
+                <br>Paying for College
+                <br>Alternatives to 4-year College
+                <br> Budgeting
+            </p>
+            <p>The artifact is a listing from Schoology of all the lessons in those units. While most of the curriculum
+                was from <a href="https://www.ngpf.org/courses/full-year-course/" target="_blank">NextGen Personal
+                    Finance</a>, several lessons in the Paying for College unit were my own based on my own research and
+                experience as a dad. Those lessons were:
+                <br>Deep Dive: Deciding Where to Go to School
+                <br>Choice Projects
+                <br>Deep Dive: Savings Plans and Scholarships
+            </p>
+            <p>In my Personal Finance class, one of the most salient units was Buying a Car. High school students had no
+                trouble finding this relevant. The artifact I present is a submission from one of the students for the
+                lesson "Research: Find Your Next Car".</p>
         </div>
+
+        <section class="intasc grid3b">
+            <div class="box intasc">
+                <h2 class="left">Final Projects Fall '24:</h2>
+                <br><a href="https://garymalk.github.io/CSD112/bipolar-disorder/BIPOLAR%20DISORDER.html"
+                    target="_blank">Bipolar Disorder Awareness</a>
+                <br><a href="https://garymalk.github.io/CSD112/botblasters/home.html" target="_blank">BOTBLASTERS</a>
+                <br><a href="https://garymalk.github.io/CSD112/budget-computers" target="_blank">Budget Computers</a>
+                <br><a href="https://garymalk.github.io/CSD112/Carla_Coates_Portfolio/Portfolio_final.html"
+                    target="_blank">Carla Coates Portfolio</a>
+                <br><a href="https://garymalk.github.io/CSD112/cartinting" target="_blank">Car Tinting</a>
+                <br><a href="https://garymalk.github.io/CSD112/checkplease" target="_blank">Check Please</a>
+                <br><a href="https://garymalk.github.io/CSD112/cooking_odyssey" target="_blank">Cooking Odyssey</a>
+                <br><a href="https://garymalk.github.io/CSD112/echoes-of-hope/Index.html" target="_blank">Echoes of
+                    Hope</a>
+                <br><a href="https://garymalk.github.io/CSD112/greencorner" target="_blank">Green Corner</a>
+                <br><a href="https://garymalk.github.io/CSD112/koza-landscaping" target="_blank">Koza Landscaping</a>
+                <br><a href="https://garymalk.github.io/CSD112/microcrochet" target="_blank">Microcrochet</a>
+                <br><a href="https://garymalk.github.io/CSD112/redvox/home.html" target="_blank">RedVox</a>
+                <br><a href="https://garymalk.github.io/CSD112/pet-shop" target="_blank">Pet Shop</a>
+                <br><a href="https://garymalk.github.io/CSD112/service-hub/home.html" target="_blank">Service Hub</a>
+                <br><a href="https://garymalk.github.io/CSD112/silverstrait" target="_blank">Silverstrait</a>
+                <br><a href="https://garymalk.github.io/CSD112/whistler/index.html" target="_blank">Whistler</a>
+
+            </div>
+            <div class="box intasc">
+                <h2 class="left">Final Projects Summer '24:</h2>
+                <br><a href="https://garymalk.github.io/CSD112/Disbarred/index.html" target="_blank">Disbarred</a>
+                <br><a href="https://garymalk.github.io/CSD112/Grigory/index.html" target="_blank">Grigory</a>
+                <br><a href="https://garymalk.github.io/CSD112/Japan/home.html" target="_blank">Studying in Japan</a>
+                <br><a href="https://garymalk.github.io/CSD112/KayibaConnect/index.html" target="_blank">Kayiba
+                    Connect</a>
+                <br><a href="https://garymalk.github.io/CSD112/MKArt/Index.html" target="_blank">MK Art</a>
+                <br><a href="https://garymalk.github.io/CSD112/TheMovement/index.html" target="_blank">The Movement</a>
+                <br><a href="https://garymalk.github.io/CSD112/Tanks/Small%20World%20War%20II%20Tank%20Museum.html"
+                    target="_blank">Small World War II Tank Museum</a>
+                <br><a href="https://garymalk.github.io/CSD112/ToyotaSupra/index.html" target="_blank">Toyota Supra</a>
+                <br><a href="https://garymalk.github.io/CSD112/Warhammer/Index.html" target="_blank">Warhammer</a>
+            </div>
+
+            <embed src="Finance Curriculum.pdf" type="application/pdf" width="550px" height="600px"
+                title="Embedded PDF Document">
+        </section>
+
+        <section class="intasc grid1">
+            <embed src="RESEARCH - Find Your Next Car.pdf" type="application/pdf" width="1600px" height="900px"
+                title="Embedded PDF Document">
+        </section>
     </section>
 </body>
 
