intasc6, added alt tags to pictures

--- a/intasc/intasc1.html
+++ b/intasc/intasc1.html
@@ -80,7 +80,7 @@
                     they coded along, which would help them completing their assignment. It is also a good habit to
                     develop in general.</p>
             </div>
-            <img src="../img/scaffolding.jpg">
+            <img src="../img/scaffolding.jpg" alt="computer code to read/write to file used as scaffolding">
             <div>
                 <div class="box intasc">
                     <h2>Adding Challenge</h2>
