--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -49,8 +49,8 @@
         </div>
 
         <section class="intasc grid2">
-            <img src="../img/Choice Activity.png">
-            <img src="../img/Choice Project.png">
+            <img src="../img/Choice Activity.png" alt="screenshot from Schoology of Choice Activity">
+            <img src="../img/Choice Project.png" alt="screenshot from Schoology of Choice Projects">
 
             <div>
                 <div class="box intasc">
@@ -124,7 +124,7 @@
                         <li>Living with family</li>
                     </ul>
                 </div>
-                <img src="../img/FAFSA.png">
+                <img src="../img/FAFSA.png" alt="screenshot submitted by a student to show FAFSA was completed">
                 <embed src="trade school.pdf" type="application/pdf" width="100%" height="1000px"
                     title="Embedded PDF Document">
             </div>
