--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -72,7 +72,7 @@
         </div>
 
         <section class="intasc grid3b">
-            <div class="box intasc">
+            <div class="box intasc" id="projects">
                 <h2 class="left">Final Projects Fall '24:</h2>
                 <br><a href="https://garymalk.github.io/CSD112/bipolar-disorder/BIPOLAR%20DISORDER.html"
                     target="_blank">Bipolar Disorder Awareness</a>
