--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -44,8 +44,192 @@
                 learners in their own growth, to monitor learner progress, and to guide the candidate’s and learner’s
                 decision making.</blockquote>
 
-            <p>text needed Assessment.</p>
+            <p>Assessments either provide feedback as the learner is progressing, contribute to determining how well the
+                learner has mastered the material for the purposes of a grade, or both. <em>Formative Assessments</em>
+                provide feedback to the learner and/or the teacher.&nbsp;<em>Summative Assessments</em> contribute to
+                the student's grade at the end of the process.</p>
         </div>
+
+        <section class="intasc grid2">
+            <div class="box intasc">
+                <h2>Formative Assessments</h2>
+                <p>As an instructor, I assist students with feedback as they are working as well as solicit feedback
+                    while I'm teaching. I encourage students to evaluate themselves by providing tools and opportunities
+                    to critique each other. Artifacts which demonstrate my use of formative assessment:</p>
+                <ul>
+                    <li>Fist of Five: this screenshot is inserted at multiple points in a lecture presentation. Students
+                        are asked, as a group, to raise their hands in the air with a number of fingers displayed
+                        indicating their confidence in the material presented so far. When I see students displaying 0-3
+                        fingers, I stop and probe for what the point of confusion is. When possible, I'll ask a student
+                        displaying 4 or 5 if they can explain it. Sometimes hearing it from another student makes all
+                        the difference.&nbsp;
+                    </li>
+                    <li>Mud Check: asking a yes/no question such as "did everyone understand that" or "are there any
+                        questions" will not always get results because sometimes a confused student is afraid of looking
+                        stupid. "What is the Muddiest thing I said today" or "what was the most confusing concept for
+                        you?" is open ended and&nbsp;<em>presumes</em> that something was confusing which makes it safer
+                        for the student to bring something up.</li>
+                </ul>
+                <p>I ask both questions verbally when not using presentation software.</p>
+            </div>
+            <div class="box intasc">
+                <ul>
+                    <li>Online HTML and CSS validator tools: My HTML students are required to use these on their
+                        assignments before turning them in, which makes them formative self-assessment. However, I will
+                        use these tools, too, and if I find any errors the tools immediately become summative! We have
+                        weekly assignments, so getting points knocked off a previous one is usually, again, a formative
+                        experience. There are many online valiator tools, but these are my favorites:
+                        <br><a href="https://validator.w3.org/" target="_blank">HTML Validator</a>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS
+                            Validator</a>
+                    </li>
+                    <li>
+                        Students give each other feedback, such as critiquing each other's <a
+                            href="intasc5.html#projects" target="_self">Final Projects</a> as displayed in Standard #4..
+                    </li>
+                    <li>"Do Now" Quizzes: In order to make sure my students are reading the
+                        textbook&nbsp;<em>before</em> the
+                        lecture, they have a short, low-stakes, open-book quiz at the beginning of class before I've
+                        even lectured on the material. It is partly summative because it does contribute to their grade,
+                        but the points are low, I will go over the correct answers in the lecture, and students in the
+                        lower division classes can take the quiz a second time, so it's mostly formative.</li>
+                    <li>Scholarship Essay - written feedback: This was part of the Paying for College unit in the
+                        Personal Finance class. I present as artifacts the student's initial submission, my feedback,
+                        and the student's final submission.</li>
+                </ul>
+            </div>
+
+            <img src="../img/Fist of Five.png" alt="Fist of Five: picture of six hands holding up 0 to 5 fingers">
+            <img src="../img/Mud Check 1.png" alt="Mud Check: picture of muddy child">
+            <img src="../img/Mud Check 2.png" alt="Mud Check: picture of muddy dog">
+
+            <embed src="Do-Now.pdf" type="application/pdf" width="800px"
+                height="600px" title="Embedded PDF Document">
+
+            <div>
+            <div class="box intasc">
+                <h2>Scholarship Rough Draft</h2>
+                <p>Most days, the house is loud. Not with laughter or music, but with the sounds of crying toddlers,
+                    parents yelling, and the aching reminder of responsibility. I’m the oldest of three, and while most
+                    people my age were worrying about what to post, I was figuring out how to clean the whole house,
+                    babysit, work, and get my homework done all in the same day.</p>
+                <p>
+                    My mom is a hard worker, she’s worked at the same place for as long as I can remeber, 40 hour weeks,
+                    sometimes 60. My dad, I don’t even really know. He’s always been in my life but he’s never really
+                    been there. An empty shell where a man once was. Silent car rides, birthday cards that all say the
+                    same thing. They always say we’re working on things but nothing has ever changed. For aslong as I
+                    can remember, my grandfather has been my bestfriend. I used to go to his house every summer and
+                    every week or weekend if my parents allowed. He would always tell me his crazy stories while we’d
+                    work in the yard and work on all these different projects. I didn’t talk to many people in my life
+                    about what was going on with me. A lot of people wouldn’t even understand. He understood me though,
+                    he saw the best in everyone. When he passed away a few months ago, I felt like a piece of me had
+                    died too. In my darkest days he was what got me through, even now I still do my best for him.
+                </p>
+
+            </div>
+            <div class="box intasc">
+                <h2>Scholarship Rough Draft Feedback</h2>
+                <p>Great start, with a moving emotional narrative. A few things:</p>
+                <p>You've got the vulnerability piece nailed. Now you have to figure out where you are going with this.
+                    How is this related to your educational goals and what you want to do with your life? What insights
+                    do you have?</p>
+                <p>Some crafting issues:<br />"My mom is a hard worker, she&rsquo;s worked at..."<br />Those are two
+                    independent clauses. They can't be joined by a comma. I would change the first part into its own
+                    sentence:<br />"My mom is a hard worker. She&rsquo;s worked at..."</p>
+                <p>"remeber" - spelling: remember</p>
+                <p>"An empty shell where a man once was." I get your meaning, but that's a judgement. I would leave it
+                    out and stick to the facts such as silent car rides, repetitive birthday cards, and not being there.
+                </p>
+                <p>"For aslong as I can remember, my grandfather has been my bestfriend." I would make this the start of
+                    a new paragraph, because it is a change of subject from your mom and dad. Also:</p>
+                <p>"aslong" that's two words: "as long"</p>
+                <p>"bestfriend" also two words</p>
+                <p>"In my darkest days he was what got me through, even now I still do my best for him."</p>
+                <p>Again, you have two independent clauses joined by a comma. It's much stronger like this:<br />"In my
+                    darkest days he was what got me through. Even now I still do my best for him."</p>
+                <p>Use grammar check &amp; spell check, and ask at least three people to critique it for you. One of
+                    those people should be an English teacher and one should be another student.</p>
+                <p>Great start, though. You communicate your feelings very well. Tie it in with what you have learned
+                    and what you want to do and it will be a strong contender.<br />Thu May 29, 2025 at 12:12 pm</p>
+            </div>
+            </div>
+            <div class="box intasc">
+                <h2>Scholarship Final Draft</h2>
+                <p>Most days, the house is loud. Not with laughter or music, but with the sounds of crying toddlers,
+                    parents yelling, and the aching reminder of responsibility. I&rsquo;m the oldest of three, and while
+                    most people my age were worrying about what to post, I was figuring out how to clean the whole
+                    house, babysit, work, and get my homework done all in the same day.</p>
+                <p>My mom is a hard worker. She&rsquo;s worked at the same place for as long as I can remember, 40 hour
+                    weeks, sometimes 60. My dad, I don&rsquo;t even really know. He&rsquo;s always been in my life but
+                    he&rsquo;s never really been there. Silent car rides, birthday cards that all say the same thing.
+                    They always say we&rsquo;re working on things but nothing has ever changed.&nbsp;</p>
+                <p>For as long as I can remember, my grandfather has been my best friend. I used to go to his house
+                    every summer and every week or weekend if my parents allowed. He would always tell me his crazy
+                    stories while we&rsquo;d work in the yard and work on all these different projects. I didn&rsquo;t
+                    talk to many people in my life about what was going on with me. A lot of people wouldn&rsquo;t even
+                    understand. He understood me though, he saw the best in everyone. When he passed away a few months
+                    ago, I felt like a piece of me had died too. In my darkest days he was what got me through. Even now
+                    I still do my best for him.</p>
+                <p>I taught myself to be a parent and a student at the same time, helping my siblings with their
+                    homework while I did my own, getting stuff done early when the house was quiet. School was where I
+                    could escape. The pages of my books didn&rsquo;t judge me. The teachers didn&rsquo;t complain when I
+                    was too tired to speak, and sometimes just being in a classroom was enough to gain strength from
+                    learning, maybe something I learned from my grandpa since he was a life long learner.</p>
+                <p>Everyday I think about quitting. The day I broke my back and shoulders I literally thought I might
+                    never recover. The only place I had joy was with football. I wanted to quit. I stayed in school
+                    while recovering, and stayed on top of schoolwork. I feared that if I did not keep my word, I would
+                    never change the narrative of my life days when grief forced me to carry a weight I could not lift.
+                    But I keep coming back because I believe in education. I believe in where it might take me, and most
+                    importantly I believe in where it might take my family.</p>
+                <p>I&rsquo;m not entering college as an escape, and I&rsquo;m not on a mission to get a degree. I want
+                    to study psychology and become a person who helps others overcome circumstances. I want to show my
+                    siblings that the beginning doesn&rsquo;t dictate the ending, and remind the young boy I once
+                    was&mdash;all cozied up on a couch with a flashlight and a book&mdash;that he was always meant to do
+                    it.</p>
+                <p>I've learned that strength is not always loud. Sometimes, strength looks like getting up early enough
+                    before the sun even comes up to make everyone lunches. Sometimes it looks like studying in the
+                    morning when it&rsquo;s finally quiet. Sometimes I&rsquo;m not sure if I&rsquo;m strong at all but I
+                    know that some day it will all be worth it. I have the weight of my family's hope on my shoulders
+                    and I carry it with pride.</p>
+                <p>This scholarship would not be just a financial burden relieved, but it would be a doorway. A way to
+                    turn pain into purpose, because then it would all be for something. A way to make my grandfather
+                    proud, repay my mother of all her sacrifices, and to be the role model and example for my siblings.
+                </p>
+                <p>I am not looking for an easy path, I have never had one. I am just looking to keep moving forward.
+                </p>
+            </div>
+
+            <div class="box intasc">
+                <h2>Summative Assessments</h2>
+                <p>Student assignments, quizzes and exams, and participation points contribute towards a student's final
+                    score. The artifacts presented:</p>
+                <ul>
+                    <li>History of Computer Science Exit Ticket: the student demonstrates that they mastered the
+                        learning objectives.</li>
+                    <li>Mock Final Exam for the Algorithms class: for obvious reasons I don't want to post the real exam
+                        on the internet, but this mock has questions similar to or from the same test bank as the real
+                        exam but with the numbers changed. Students can take the mock as many times as they like, but it
+                        is work no points. It is in that sense a formative assessment but an example of what the
+                        summative exam will look like.</li>
+                    <li>Final Exam Item Banks: the Algorithms final exam is 25 questions, online, in-person, on school
+                        computers only with internet access limited to Canvas and the online course textbook. The
+                        questions are randomly taken from the banks per the break-down. Question order is randomized and
+                        answer choices are randomized.</li>
+                    <li>Final Exam Question Break-Down: questions are randomly selected from the Item Banks by this
+                        break-down.</li>
+                </ul>
+            </div>
+
+            <embed src="History of Computer Science Exit Ticket.pdf" type="application/pdf" width="800px"
+                height="800px" title="Embedded PDF Document">
+
+            <embed src="Mock Final.pdf" type="application/pdf" width="800px" height="800px"
+                title="Embedded PDF Document">
+
+            <embed src="Item Banks.pdf" type="application/pdf" width="800px" height="800px"
+                title="Embedded PDF Document">
+        </section>
+        <p></p>
     </section>
 </body>
 
