--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <main>
             <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
-                    class="left" src="img/CWU_Medallion-RGB-transparent.png"></a>
+                    class="left" src="img/CWU_Medallion-RGB-transparent.png" alt="Seal of Central Washington University"></a>
 
             <div class="box center">
                 Central Washington University
@@ -49,7 +49,7 @@
                 <br>Summer 2024 Cohort
             </div>
 
-            <img class="right" src="img/Gary.jpg">
+            <img class="right" src="img/Gary.jpg" alt="photo of Gary Malkasian">
         </main>
     </section>
 </body>
