added doc links to intasc6

--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -45,13 +45,13 @@
                 decision making.</blockquote>
 
             <p>Assessments either provide feedback as the learner is progressing, contribute to determining how well the
-                learner has mastered the material for the purposes of a grade, or both. <em>Formative Assessments</em>
-                provide feedback to the learner and/or the teacher.&nbsp;<em>Summative Assessments</em> contribute to
+                learner has mastered the material for the purposes of a grade, or both. <a href="#formative">Formative Assessments</a>
+                provide feedback to the learner and/or the teacher.&nbsp;<a href="#summative">Summative Assessments</a> contribute to
                 the student's grade at the end of the process.</p>
         </div>
 
         <section class="intasc grid2">
-            <div class="box intasc">
+            <div class="box intasc" id="formative">
                 <h2>Formative Assessments</h2>
                 <p>As an instructor, I assist students with feedback as they are working as well as solicit feedback
                     while I'm teaching. I encourage students to evaluate themselves by providing tools and opportunities
@@ -199,7 +199,7 @@
                 </p>
             </div>
 
-            <div class="box intasc">
+            <div class="box intasc" id="summative">
                 <h2>Summative Assessments</h2>
                 <p>Student assignments, quizzes and exams, and participation points contribute towards a student's final
                     score. The artifacts presented:</p>
